// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceFooter Component default case should render 1`] = `
<div
  className="source-footer"
>
  <div
    className="source-footer-start"
  />
  <div
    className="source-footer-end"
  >
    <div
      className="cursor-position"
      title="(Line 1, column 1)"
    >
      (1, 1)
    </div>
    <PaneToggleButton
      collapsed={false}
      horizontal={false}
      key="toggle"
      position="start"
    />
  </div>
</div>
`;

exports[`SourceFooter Component move cursor should render new cursor position 1`] = `
<div
  className="source-footer"
>
  <div
    className="source-footer-start"
  />
  <div
    className="source-footer-end"
  >
    <div
      className="cursor-position"
      title="(Line 6, column 11)"
    >
      (6, 11)
    </div>
    <PaneToggleButton
      collapsed={false}
      horizontal={false}
      key="toggle"
      position="start"
    />
  </div>
</div>
`;
